# mimamorikanshi-system-monitor

./: .gitignore  README.md  genmon.sh  meson.build
data/: meson.build  mimamorikanshi.desktop
doc/: SPEC.md
old-genmon/: config.yaml  daemon.py
src/: common.h  config.c  config.h  dialog.c  dialog.h  drawing.c  drawing.h  meson.build  monitor.c  monitor.h  plugin.c  plugin.h  suspend.c  suspend.h
src/parser/: proc_stat_parser.c  proc_stat_parser.h
test/: dev.sample  diskstats.sample  meminfo.sample  stat.sample
